force-app/main/default/objects/Announcements__c/Announcements__c.object-meta.xml
<CustomObject>
    <label>Announcements</label>
    <nameField>
        <displayFormat>AN-{00000000}</displayFormat>
        <label>Announcements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>