force-app/main/default/objects/Announcements__c/fields/Announcement_Description__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Description__c</fullName>
    <label>Announcement Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>