force-app/main/default/objects/Announcements__c/fields/Announcement_Title__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Title__c</fullName>
    <label>Announcement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>