force-app/main/default/objects/Announcements__c/fields/Sobha_Connect__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sobha Connect</label>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>Announcements</relationshipLabel>
    <relationshipName>Announcements1</relationshipName>
    <type>Lookup</type>
</CustomField>